mirco fix spacing

--- a/app/assets/scss/_page-prenotazioni.scss
+++ b/app/assets/scss/_page-prenotazioni.scss
@@ -403,7 +403,7 @@ body.page-reservation {
 			display: inline-flex;
 			align-items: center;
 			justify-content: center;
-			align-self: flex-start;
+			align-self: flex-end;
 			min-height: 36px;
 		}
 	}
